[INFER] Uncopy non-object operands before forgetting in ops which expect objects, bug 660002.